using UnityEngine;

public class Player : MonoBehaviour
{
	//private PlayerInputController _playerInputController;

	// Abilities
	public bool canFly = true;
	public bool lifeRegeneration = true;
	public bool skill1 = true;
	public bool skill2 = true;
	public bool skill3 = true;

	public void Skill1()
	{
		
	}
	
	public void Skill2()
	{
		
	}
	
	public void Skill3()
	{
		
	}
}